--- a/css/_global.scss
+++ b/css/_global.scss
@@ -4,7 +4,6 @@
 
 $green-dark: rgb(0, 92, 110);
 $black: rgb(23, 25, 31);
-
 $green-middle: rgb(108, 179, 182);
 $green-light: rgb(157, 175, 98);
 $blue-dark: #6f7098;
@@ -14,3 +13,6 @@ $gray-blue: rgb(187, 191, 205);
 
 $gradient: linear-gradient(-135deg, rgb(255, 255, 255), $gray);
 $transition-func: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+$container-padding-left-right: 1em;
+$container-max-width: 1220px;
