--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,7 +1,4 @@
-/*===============
-  Color paletee
-=================*/
-
+// Color pallete
 $green-dark: rgb(0, 92, 110);
 $black: rgb(23, 25, 31);
 $green-middle: rgb(108, 179, 182);
@@ -9,6 +6,8 @@ $green-light: rgb(157, 175, 98);
 $blue-dark: #6f7098;
 $gray: rgb(248, 248, 248);
 $gray-blue: rgb(187, 191, 205);
+$navy: rgb(17, 32, 44);
+$orange: rgb(210, 65, 79);
 // End of color palette
 
 $gradient: linear-gradient(-135deg, rgb(255, 255, 255), $gray);
