Fix header, slide menu and hero
See: #1

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,4 +1,3 @@
-/* Base styles */
 :root {
   box-sizing: border-box;
 }
@@ -8,13 +7,20 @@
 ::after {
   margin: 0;
   padding: 0;
-}
-
-body {
   box-sizing: inherit;
 }
 
-/* Container styles */
+body {
+  font-family: "Poppins", sans-serif;
+}
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $gray-dark;
+  border-radius: 0px;
+}
+
 .container {
   max-width: $container-max-width;
   margin: 0 auto;
