--- a/css/_global.scss
+++ b/css/_global.scss
@@ -5,6 +5,7 @@ $green-middle: rgb(108, 179, 182);
 $green-light: rgb(157, 175, 98);
 $blue-dark: #6f7098;
 $gray: rgb(248, 248, 248);
+$gray-dark: #818181;
 $gray-blue: rgb(187, 191, 205);
 $navy: rgb(17, 32, 44);
 $orange: rgb(210, 65, 79);
@@ -15,3 +16,73 @@ $transition-func: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
 $container-padding-left-right: 1em;
 $container-max-width: 1220px;
+
+// Media queries
+$fifteen-inch: 1440px;
+$thirteen-inch: 1280px;
+$desktop-width: 1024px;
+$little-desktop: 850px;
+$tablet-width: 768px;
+$weird-not-tablet-width: 630px;
+$phablet-width: 550px;
+$mobile-width: 480px;
+$small-mobile-width: 360px;
+$tiny-mobile-width: 330px;
+
+@mixin transition {
+  transition: all 0.2s ease-in-out;
+}
+
+@mixin thirteen {
+  @media screen and (min-width: #{$thirteen-inch}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media screen and (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
+
+@mixin little-desktop {
+  @media screen and (min-width: #{$little-desktop}) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (min-width: #{$tablet-width}) {
+    @content;
+  }
+}
+
+@mixin weird-medium {
+  @media screen and (min-width: #{$weird-not-tablet-width}) {
+    @content;
+  }
+}
+
+@mixin phablet {
+  @media screen and (min-width: #{$phablet-width}) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media screen and (min-width: #{$mobile-width}) {
+    @content;
+  }
+}
+
+@mixin small-mobile {
+  @media screen and (min-width: #{$small-mobile-width}) {
+    @content;
+  }
+}
+
+@mixin tiny-mobile {
+  @media screen and (min-width: #{$tiny-mobile-width}) {
+    @content;
+  }
+}
