--- a/css/_links.scss
+++ b/css/_links.scss
@@ -1,18 +1,18 @@
 @import "global";
 
-/* Links and buttons styles */
 .link {
+  font-weight: 300;
+  font-size: 0.8em;
+  letter-spacing: 2px;
   text-decoration: none;
-  padding: 8px 16px;
+  padding: 8px 0px;
   color: $gray;
+  margin-right: 3em;
 
   &--top {
     @extend .link;
-    font-size: 16px;
+    @include transition;
     text-transform: uppercase;
-    letter-spacing: 1px;
-    transition: color 0.2s;
-
     &:hover {
       color: $green-light;
     }
@@ -21,20 +21,35 @@
 
 .button {
   text-decoration: none;
-  padding: 8px 24px;
-  background-color: rgba(108, 179, 182, 0.3);
-  border-radius: 4px;
-  color: white;
-  font-size: 18px;
-  transition: 0.2s;
+  padding: 1em 2em;
+  font-weight: 400;
+  font-size: 0.9em;
+  letter-spacing: 0.5px;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.08);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 6px;
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
+  @include transition;
 
   &:hover {
-    background-color: rgba(108, 179, 182, 0.5);
+    background-color: rgba(255, 255, 255, 0.18);
+  }
+
+  &--resume {
+    @extend .button;
+    font-size: 0.8rem;
+    padding: 0.6em 1.8em;
   }
 }
 
 .logo {
   @extend .link;
-  font-size: 30px;
-  padding: 0;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0.2em 0.3em 0.3em 0.4em;
+  margin: 0;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
 }
