--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-/* Base styles */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap");
 :root {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -9,23 +11,34 @@
 ::after {
   margin: 0;
   padding: 0;
-}
-
-body {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
 
-/* Container styles */
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #818181;
+  border-radius: 0px;
+}
+
 .container {
   max-width: 1220px;
   margin: 0 auto;
 }
 
-/* Header styles */
 header {
   background-color: #005c6e;
-  padding: 0.5em 1em;
+  padding: 1.6em 1em;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
 }
 
 header .container {
@@ -38,42 +51,62 @@ header .container {
 }
 
 .topnav {
-  margin-left: auto;
   display: none;
+  margin-left: auto;
 }
 
-/* Top navigation styles */
+@media screen and (min-width: 768px) {
+  .topnav {
+    display: block;
+  }
+}
+
 .menu-container {
   display: inline-block;
   margin-left: auto;
   padding: 0px 4px;
   cursor: pointer;
   z-index: 2;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-.menu-container:hover {
-  -webkit-animation-name: rotate;
-          animation-name: rotate;
-  -webkit-animation-duration: 0.4s;
-          animation-duration: 0.4s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
+}
+
+.menu-container:hover .bar1,
+.menu-container:hover .bar2,
+.menu-container:hover .bar3 {
+  background-color: #9daf62;
+}
+
+.menu-container.change {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .bar1,
 .bar2,
 .bar3 {
   width: 35px;
-  height: 5px;
+  height: 2px;
   background-color: #f8f8f8;
   margin: 6px 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.bar2 {
+  width: 25px;
+  margin-left: 5px;
 }
 
 .change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-          transform: rotate(-45deg) translate(-9px, 6px);
+  -webkit-transform: rotate(-45deg) translate(-6px, 4px);
+          transform: rotate(-45deg) translate(-6px, 4px);
 }
 
 .change .bar2 {
@@ -81,11 +114,10 @@ header .container {
 }
 
 .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-          transform: rotate(45deg) translate(-8px, -8px);
+  -webkit-transform: rotate(45deg) translate(-8px, -4px);
+          transform: rotate(45deg) translate(-8px, -4px);
 }
 
-/* Slide menu styles */
 .sidenav {
   position: fixed;
   height: 0px;
@@ -110,26 +142,29 @@ header .container {
   transition: 0.5s;
 }
 
-/* The side navigation menu links */
+@media screen and (min-width: 768px) {
+  .sidenav {
+    display: none;
+  }
+}
+
 .sidenav > a, .social i {
   padding: 8px;
   text-decoration: none;
   font-size: 35px;
   color: #818181;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .sidenav > a {
   display: block;
 }
 
-/* Mouse over links */
 .sidenav > a:hover {
-  color: #f1f1f1;
+  color: #9daf62;
 }
 
-/* Social links styles */
 .social {
   padding: 24px;
 }
@@ -164,42 +199,131 @@ header .container {
   }
 }
 
-/* Links and buttons styles */
 .link, .link--top, .logo {
+  font-weight: 300;
+  font-size: 0.8em;
+  letter-spacing: 2px;
   text-decoration: none;
-  padding: 8px 16px;
+  padding: 8px 0px;
   color: #f8f8f8;
+  margin-right: 3em;
 }
 
 .link--top {
-  font-size: 16px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   text-transform: uppercase;
-  letter-spacing: 1px;
-  -webkit-transition: color 0.2s;
-  transition: color 0.2s;
 }
 
 .link--top:hover {
   color: #9daf62;
 }
 
-.button {
+.button, .button--resume {
   text-decoration: none;
-  padding: 8px 24px;
-  background-color: rgba(108, 179, 182, 0.3);
-  border-radius: 4px;
-  color: white;
-  font-size: 18px;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  padding: 1em 2em;
+  font-weight: 400;
+  font-size: 0.9em;
+  letter-spacing: 0.5px;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.08);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 6px;
+  -webkit-box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
+          box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-.button:hover {
-  background-color: rgba(108, 179, 182, 0.5);
+.button:hover, .button--resume:hover {
+  background-color: rgba(255, 255, 255, 0.18);
+}
+
+.button--resume {
+  font-size: 0.8rem;
+  padding: 0.6em 1.8em;
 }
 
 .logo {
-  font-size: 30px;
-  padding: 0;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0.2em 0.3em 0.3em 0.4em;
+  margin: 0;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  -webkit-clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
+          clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
+}
+
+main {
+  height: 100vh;
+  background-color: aqua;
+  margin: 0;
+}
+
+.hero {
+  position: relative;
+  height: 100%;
+  background-color: #005c6e;
+  background-image: url("../images/land-mount.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: exclusion;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero-container {
+  max-width: 550px;
+  padding: 1em;
+  margin: auto;
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.hero-container * {
+  display: inline-block;
+  margin: 16px 0;
+}
+
+.hero-title {
+  position: relative;
+  font-weight: 200;
+  font-size: 2em;
+  letter-spacing: 6px;
+  color: white;
+  line-height: 0.9em;
+  pointer-events: none;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-title {
+    font-size: 3em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 3.5em;
+  }
+}
+
+.hero-subtitle {
+  font-weight: 600;
+  font-size: 0.8em;
+  letter-spacing: 3px;
+  color: #bbbfcd;
+  width: 100%;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=main.css.map */
