--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,7 @@ header .container {
 
 .social i {
   font-size: 22px;
+  margin: 0 0.2em;
 }
 
 .social > a:hover i {
@@ -236,7 +237,7 @@ header .container {
 }
 
 .button:hover, .button--resume:hover {
-  background-color: rgba(255, 255, 255, 0.18);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .button--resume {
@@ -250,9 +251,16 @@ header .container {
   padding: 0.2em 0.3em 0.3em 0.4em;
   margin: 0;
   text-align: center;
+  z-index: 2;
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
           clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.logo:hover {
+  background-color: #9daf62;
 }
 
 main {
