--- a/css/_links.scss
+++ b/css/_links.scss
@@ -1,18 +1,26 @@
 @import "global";
 
 .link {
-  font-weight: 300;
-  font-size: 0.8em;
+  font-weight: 400;
+  font-size: 1.2em;
   letter-spacing: 2px;
   text-decoration: none;
-  padding: 8px 0px;
+  padding: 26px 0px;
   color: $gray;
-  margin-right: 3em;
+  transition: color 0.2s;
 
   &--top {
     @extend .link;
-    @include transition;
+
+    display: block;
+
     text-transform: uppercase;
+    @include tablet {
+      font-size: 0.8em;
+      margin-right: 3em;
+      padding: 8px 0px;
+    }
+
     &:hover {
       color: $green-light;
     }
@@ -30,7 +38,7 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 6px;
   box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
-  @include transition;
+  transition: background-color 0.2s;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.2);
@@ -38,8 +46,17 @@
 
   &--resume {
     @extend .button;
-    font-size: 0.8rem;
-    padding: 0.6em 1.8em;
+    display: inline-block;
+    font-size: 0.9rem;
+    padding: 1em 3em;
+    align-self: center;
+    margin-top: 3em;
+    text-transform: capitalize;
+    @include tablet {
+      padding: 0.8em 2em;
+      margin-top: 0;
+      font-size: 0.8em;
+    }
   }
 }
 
@@ -53,8 +70,7 @@
   z-index: 2;
   background-color: rgba(255, 255, 255, 0.2);
   clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
+  transform-style: preserve-3d;
+
   @include transition;
-  &:hover {
-    background-color: $green-light; //rgba(255, 255, 255, 0.3);
-  }
 }
