--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,5 +1,32 @@
+.topnav {
+  height: 100%;
+  width: 75vw;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: -100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  background-color: rgba(17, 32, 44, 1); //$navy;
+  box-shadow: -10px 0px 30px -15px $navy;
+  transition: right 0.2s;
+
+  @include tablet {
+    position: static;
+    width: auto;
+    flex-direction: row;
+    padding: 0;
+    margin-left: auto;
+    background-color: $green-dark;
+  }
+}
+
 .menu-container {
   display: inline-block;
+
   @include tablet {
     display: none;
   }
@@ -50,48 +77,32 @@
   transform: rotate(45deg) translate(-8px, -4px);
 }
 
-.sidenav {
-  position: fixed;
-  height: 0px;
-  width: 100%;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: $navy;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  transition: 0.5s;
+// .sidenav {
+//   position: fixed;
+//   height: 0px;
+//   width: 100%;
+//   z-index: 1;
+//   top: 0;
+//   left: 0;
+//   background-color: $navy;
 
-  @include tablet {
-    display: none;
-  }
-}
+//   overflow: hidden;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   text-align: center;
+//   transition: 0.5s;
 
-%sidemenulinks {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 35px;
-  color: $gray-dark;
-  @include transition;
-}
-.sidenav > a {
-  @extend %sidemenulinks;
-  display: block;
-
-  &:hover {
-    color: $green-light;
-  }
-}
+//   @include tablet {
+//     display: none;
+//   }
+// }
 
 .social {
   padding: 24px;
 }
 
 .social i {
-  @extend %sidemenulinks;
   font-size: 22px;
   margin: 0 0.2em;
 }
