--- a/css/main.css
+++ b/css/main.css
@@ -42,22 +42,55 @@ header {
 }
 
 header .container {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-x: hidden;
 }
 
 .topnav {
-  display: none;
-  margin-left: auto;
+  height: 100%;
+  width: 75vw;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: -100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow-x: hidden;
+  background-color: #11202c;
+  -webkit-box-shadow: -10px 0px 30px -15px #11202c;
+          box-shadow: -10px 0px 30px -15px #11202c;
+  -webkit-transition: right 0.2s;
+  transition: right 0.2s;
 }
 
 @media screen and (min-width: 768px) {
   .topnav {
-    display: block;
+    position: static;
+    width: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 0;
+    margin-left: auto;
+    background-color: #005c6e;
   }
 }
 
@@ -118,53 +151,6 @@ header .container {
           transform: rotate(45deg) translate(-8px, -4px);
 }
 
-.sidenav {
-  position: fixed;
-  height: 0px;
-  width: 100%;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #11202c;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-@media screen and (min-width: 768px) {
-  .sidenav {
-    display: none;
-  }
-}
-
-.sidenav > a, .social i {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 35px;
-  color: #818181;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.sidenav > a {
-  display: block;
-}
-
-.sidenav > a:hover {
-  color: #9daf62;
-}
-
 .social {
   padding: 24px;
 }
@@ -201,19 +187,27 @@ header .container {
 }
 
 .link, .link--top, .logo {
-  font-weight: 300;
-  font-size: 0.8em;
+  font-weight: 400;
+  font-size: 1.2em;
   letter-spacing: 2px;
   text-decoration: none;
-  padding: 8px 0px;
+  padding: 26px 0px;
   color: #f8f8f8;
-  margin-right: 3em;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
 }
 
 .link--top {
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  display: block;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .link--top {
+    font-size: 0.8em;
+    margin-right: 3em;
+    padding: 8px 0px;
+  }
 }
 
 .link--top:hover {
@@ -232,8 +226,8 @@ header .container {
   border-radius: 6px;
   -webkit-box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
           box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
 }
 
 .button:hover, .button--resume:hover {
@@ -241,8 +235,22 @@ header .container {
 }
 
 .button--resume {
-  font-size: 0.8rem;
-  padding: 0.6em 1.8em;
+  display: inline-block;
+  font-size: 0.9rem;
+  padding: 1em 3em;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 3em;
+  text-transform: capitalize;
+}
+
+@media screen and (min-width: 768px) {
+  .button--resume {
+    padding: 0.8em 2em;
+    margin-top: 0;
+    font-size: 0.8em;
+  }
 }
 
 .logo {
@@ -255,12 +263,10 @@ header .container {
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
           clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-}
-
-.logo:hover {
-  background-color: #9daf62;
 }
 
 main {
