--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,12 +1,41 @@
+.topnav {
+  height: 100%;
+  width: 75vw;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: -100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  background-color: rgba(17, 32, 44, 1); //$navy;
+  box-shadow: -10px 0px 30px -15px $navy;
+  transition: right 0.2s;
+
+  @include tablet {
+    position: static;
+    width: auto;
+    flex-direction: row;
+    padding: 0;
+    margin-left: auto;
+    background-color: $green-dark;
+    box-shadow: none;
+  }
+}
+
 .menu-container {
   display: inline-block;
-  @include tablet {
-    display: none;
-  }
+
   margin-left: auto;
   padding: 0px 4px;
   cursor: pointer;
+
   z-index: 2;
+  @include tablet {
+    display: none;
+  }
   @include transition;
   &:hover {
     .bar1,
@@ -30,9 +59,6 @@
   @include transition;
 }
 
-.bar1 {
-  //background-color: red;
-}
 .bar2 {
   width: 25px;
   margin-left: 5px;
@@ -50,48 +76,11 @@
   transform: rotate(45deg) translate(-8px, -4px);
 }
 
-.sidenav {
-  position: fixed;
-  height: 0px;
-  width: 100%;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: $navy;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  transition: 0.5s;
-
-  @include tablet {
-    display: none;
-  }
-}
-
-%sidemenulinks {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 35px;
-  color: $gray-dark;
-  @include transition;
-}
-.sidenav > a {
-  @extend %sidemenulinks;
-  display: block;
-
-  &:hover {
-    color: $green-light;
-  }
-}
-
 .social {
   padding: 24px;
 }
 
 .social i {
-  @extend %sidemenulinks;
   font-size: 22px;
   margin: 0 0.2em;
 }
