Add about section
See: #4

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -10,15 +10,20 @@
   box-sizing: inherit;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
 ::-webkit-scrollbar {
-  width: 0.5em;
+  background-color: $green-dark;
+  width: 0.4em;
+  margin: 5px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: $gray-dark;
-  border-radius: 0px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
 }
 
 .container {
