--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,6 +1,6 @@
 // Color pallete
 $green-dark: rgb(0, 92, 110);
-$black: rgb(23, 25, 31);
+$black: #222;
 $green-middle: rgb(108, 179, 182);
 $green-light: rgb(157, 175, 98);
 $blue-dark: #6f7098;
