--- a/css/_links.scss
+++ b/css/_links.scss
@@ -1,5 +1,3 @@
-@import "global";
-
 .link {
   font-weight: 400;
   font-size: 1.2em;
@@ -11,9 +9,7 @@
 
   &--top {
     @extend .link;
-
     display: block;
-
     text-transform: uppercase;
     @include tablet {
       font-size: 0.8em;
@@ -25,6 +21,13 @@
       color: $green-light;
     }
   }
+
+  // &--social {
+  //   @extend .link;
+  //   &:hover {
+  //     color: white;
+  //   }
+  // }
 }
 
 .button {
@@ -50,7 +53,7 @@
     font-size: 0.9rem;
     padding: 1em 3em;
     align-self: center;
-    margin-top: 3em;
+    margin-top: 2em;
     text-transform: capitalize;
     @include tablet {
       padding: 0.8em 2em;
@@ -71,6 +74,26 @@
   background-color: rgba(255, 255, 255, 0.2);
   clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
   transform-style: preserve-3d;
-
   @include transition;
+}
+
+.social .fa {
+  padding: 4px;
+  font-size: 20px;
+  margin: 10px;
+  width: 22px;
+  height: 22px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  box-sizing: unset;
+  background: rgb(236, 233, 214);
+  color: $blue-dark;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+a > i {
+  margin-right: 8px;
 }
