--- a/css/_links.scss
+++ b/css/_links.scss
@@ -1,5 +1,3 @@
-@import "global";
-
 .link {
   font-weight: 400;
   font-size: 1.2em;
@@ -11,9 +9,7 @@
 
   &--top {
     @extend .link;
-
     display: block;
-
     text-transform: uppercase;
     @include tablet {
       font-size: 0.8em;
@@ -23,6 +19,13 @@
 
     &:hover {
       color: $green-light;
+    }
+  }
+
+  &--social {
+    @extend .link;
+    &:hover {
+      color: white;
     }
   }
 }
@@ -71,6 +74,10 @@
   background-color: rgba(255, 255, 255, 0.2);
   clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
   transform-style: preserve-3d;
-
   @include transition;
+}
+
+.social i {
+  font-size: 22px;
+  margin: 0 0.5em;
 }
