Fix header style when scroll

--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -1,61 +1,63 @@
 main {
-  height: 100vh;
-  background-color: aqua;
-  margin: 0;
+	height: 100vh;
+	width: 100%;
+	background-color: aqua;
+	margin: 0;
 }
 .hero {
-  position: relative;
-
-  height: 100%;
-  background-color: $green-dark;
-  background-image: url("../images/land-mount.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  //background-blend-mode: color-burn;
-  background-blend-mode: exclusion;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	position: relative;
+	height: 100%;
+	background-color: $green-dark;
+	//background-image: url("../images/land-mount.jpg");
+	//background-image: url("../images/landscape-285.jpg");
+	//background-position: center;
+	// background-repeat: no-repeat;
+	// background-size: cover;
+	//background-blend-mode: color-burn;
+	//background-blend-mode: exclusion;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .hero-container {
-  max-width: 550px;
-  padding: 1em;
-  margin: auto;
-  text-align: center;
-  color: white;
-  background-color: rgba(0, 0, 0, 0);
-  * {
-    display: inline-block;
-    margin: 16px 0;
-  }
+	max-width: 600px;
+	padding: 1em;
+	margin: auto;
+	text-align: center;
+	color: white;
+	background-color: rgba(0, 0, 0, 0);
+	* {
+		display: inline-block;
+		margin: 16px 0;
+	}
 }
 
 .hero-title {
-  position: relative;
-  font-weight: 200;
-  font-size: 2em;
-  letter-spacing: 6px;
-  color: white;
-  line-height: 0.9em;
-  pointer-events: none;
-  text-transform: uppercase;
+	position: relative;
+	font-weight: 900;
+	font-size: 2em;
+	letter-spacing: 6px;
+	color: white;
+	line-height: 0.9em;
+	pointer-events: none;
+	text-transform: uppercase;
 
-  @include mobile {
-    font-size: 3em;
-  }
+	@include mobile {
+		font-size: 3em;
+	}
 
-  @include tablet {
-    font-size: 3.5em;
-  }
+	@include tablet {
+		font-size: 3.5em;
+	}
 }
 
 .hero-subtitle {
-  font-weight: 600;
-  font-size: 0.8em;
-  letter-spacing: 3px;
-  color: $gray-blue;
-  //margin-top: 2em;
-  width: 100%;
-  text-transform: uppercase;
+	font-weight: 600;
+	font-size: 0.8em;
+	letter-spacing: 3px;
+	color: $gray-blue;
+	line-height: 1.6;
+	//margin-top: 2em;
+	width: 90%;
+	text-transform: uppercase;
 }
