--- a/css/_global.scss
+++ b/css/_global.scss
@@ -9,11 +9,10 @@ $gray-dark: #818181;
 $gray-blue: rgb(187, 191, 205);
 $navy: rgb(17, 32, 44);
 $orange: rgb(210, 65, 79);
-// End of color palette
+$overlay: #14b1bb80;
 
 $gradient: linear-gradient(-135deg, rgb(255, 255, 255), $gray);
 $transition-func: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-
 $container-padding-left-right: 1em;
 $container-max-width: 1220px;
 
@@ -30,59 +29,59 @@ $small-mobile-width: 360px;
 $tiny-mobile-width: 330px;
 
 @mixin transition {
-  transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 @mixin thirteen {
-  @media screen and (min-width: #{$thirteen-inch}) {
-    @content;
-  }
+	@media screen and (min-width: #{$thirteen-inch}) {
+		@content;
+	}
 }
 
 @mixin desktop {
-  @media screen and (min-width: #{$desktop-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$desktop-width}) {
+		@content;
+	}
 }
 
 @mixin little-desktop {
-  @media screen and (min-width: #{$little-desktop}) {
-    @content;
-  }
+	@media screen and (min-width: #{$little-desktop}) {
+		@content;
+	}
 }
 
 @mixin tablet {
-  @media screen and (min-width: #{$tablet-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$tablet-width}) {
+		@content;
+	}
 }
 
 @mixin weird-medium {
-  @media screen and (min-width: #{$weird-not-tablet-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$weird-not-tablet-width}) {
+		@content;
+	}
 }
 
 @mixin phablet {
-  @media screen and (min-width: #{$phablet-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$phablet-width}) {
+		@content;
+	}
 }
 
 @mixin mobile {
-  @media screen and (min-width: #{$mobile-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$mobile-width}) {
+		@content;
+	}
 }
 
 @mixin small-mobile {
-  @media screen and (min-width: #{$small-mobile-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$small-mobile-width}) {
+		@content;
+	}
 }
 
 @mixin tiny-mobile {
-  @media screen and (min-width: #{$tiny-mobile-width}) {
-    @content;
-  }
+	@media screen and (min-width: #{$tiny-mobile-width}) {
+		@content;
+	}
 }
