Fix header slide final- last fix after about section

--- a/css/_links.scss
+++ b/css/_links.scss
@@ -1,114 +1,100 @@
 .link {
-  font-weight: 400;
-  font-size: 1.2em;
-  letter-spacing: 2px;
-  text-decoration: none;
-  padding: 26px 0px;
-  color: $gray;
-  transition: color 0.2s;
+	font-weight: 400;
+	font-size: 1.2em;
+	letter-spacing: 2px;
+	text-decoration: none;
+	padding: 26px 0px;
+	color: $gray;
+	transition: color 0.2s;
 
-  &--top {
-    @extend .link;
-    display: block;
-    text-transform: uppercase;
-    @include tablet {
-      font-size: 0.8em;
-      margin-right: 3em;
-      padding: 8px 0px;
-    }
+	&--top {
+		@extend .link;
+		display: block;
+		text-transform: uppercase;
+		@include tablet {
+			font-size: 0.8em;
+			margin-right: 3em;
+			padding: 8px 0px;
+		}
 
-    &:hover {
-      color: $green-light;
-    }
-  }
+		&:hover {
+			color: $green-light;
+		}
+	}
 
-<<<<<<< HEAD
-  // &--social {
-  //   @extend .link;
-  //   &:hover {
-  //     color: white;
-  //   }
-  // }
-=======
-  &--social {
-    @extend .link;
-    &:hover {
-      color: white;
-    }
-  }
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
+	// &--social {
+	//   @extend .link;
+	//   &:hover {
+	//     color: white;
+	//   }
+	// }
 }
 
 .button {
-  text-decoration: none;
-  padding: 1em 2em;
-  font-weight: 400;
-  font-size: 0.9em;
-  letter-spacing: 0.5px;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 6px;
-  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
-  transition: background-color 0.2s;
+	text-decoration: none;
+	padding: 1em 2em;
+	font-weight: 400;
+	font-size: 0.9em;
+	letter-spacing: 0.5px;
+	color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.08);
+	border: 1px solid rgba(255, 255, 255, 0.2);
+	border-radius: 6px;
+	box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1) inset;
+	transition: background-color 0.2s;
 
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-  }
+	&:hover {
+		background-color: rgba(255, 255, 255, 0.2);
+	}
 
-  &--resume {
-    @extend .button;
-    display: inline-block;
-    font-size: 0.9rem;
-    padding: 1em 3em;
-    align-self: center;
-    margin-top: 2em;
-    text-transform: capitalize;
-    @include tablet {
-      padding: 0.8em 2em;
-      margin-top: 0;
-      font-size: 0.8em;
-    }
-  }
+	&--resume {
+		@extend .button;
+		display: inline-block;
+		font-size: 0.9rem;
+		padding: 1em 3em;
+		align-self: center;
+		margin-top: 2em;
+		text-transform: capitalize;
+		@include tablet {
+			padding: 0.8em 2em;
+			margin-top: 0;
+			font-size: 0.8em;
+		}
+	}
 }
 
 .logo {
-  @extend .link;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 0.2em 0.3em 0.3em 0.4em;
-  margin: 0;
-  text-align: center;
-  z-index: 2;
-  background-color: rgba(255, 255, 255, 0.2);
-  clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
-  transform-style: preserve-3d;
-  @include transition;
+	@extend .link;
+	font-size: 20px;
+	font-weight: 500;
+	padding: 0.2em 0.3em 0.3em 0.4em;
+	margin: 0;
+	text-align: center;
+	z-index: 2;
+	background-color: rgba(255, 255, 255, 0.2);
+	clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
+	transform-style: preserve-3d;
+	@include transition;
 }
 
-<<<<<<< HEAD
 .social .fa {
-  padding: 4px;
-  font-size: 20px;
-  margin: 10px;
-  width: 22px;
-  height: 22px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-  box-sizing: unset;
-  background: rgb(236, 233, 214);
-  color: $blue-dark;
-  &:hover {
-    opacity: 0.7;
-  }
+	padding: 4px;
+	font-size: 24px;
+	font-weight: 700;
+	margin: 10px;
+	width: 22px;
+	height: 22px;
+	text-align: center;
+	text-decoration: none;
+	border-radius: 50%;
+	box-sizing: unset;
+	@include transition;
+	color: $blue-dark;
+	&:hover {
+		color: black;
+	}
 }
 
 a > i {
-  margin-right: 8px;
-=======
-.social i {
-  font-size: 22px;
-  margin: 0 0.5em;
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
+	margin-right: 8px;
 }
