--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,32 +1,32 @@
 :root {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 *,
 ::before,
 ::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+	margin: 0;
+	padding: 0;
+	box-sizing: inherit;
 }
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 body {
-  font-family: "Poppins", sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 ::-webkit-scrollbar {
-  background-color: $green-dark;
-  width: 0.4em;
-  margin: 5px;
+	background-color: $green-dark;
+	width: 0.4em;
+	margin: 5px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 6px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border-radius: 6px;
 }
 
 .container {
-  max-width: $container-max-width;
-  margin: 0 auto;
+	max-width: $container-max-width;
+	margin: 0 auto;
 }
