--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300&display=swap");
 :root {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -20,7 +22,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -45,6 +47,8 @@ header {
   position: fixed;
   z-index: 1;
   width: 100%;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 header .container {
@@ -55,15 +59,12 @@ header .container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-<<<<<<< HEAD
 }
 
 header.slide {
   padding: 0.6em 1em;
   -webkit-box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-=======
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
 }
 
 .topnav {
@@ -167,11 +168,7 @@ header.slide {
           transform: rotate(45deg) translate(-8px, -4px);
 }
 
-<<<<<<< HEAD
 .link, .link--top, .logo {
-=======
-.link, .link--top, .link--social, .logo {
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
   font-weight: 400;
   font-size: 1.2em;
   letter-spacing: 2px;
@@ -199,13 +196,6 @@ header.slide {
   color: #9daf62;
 }
 
-<<<<<<< HEAD
-=======
-.link--social:hover {
-  color: white;
-}
-
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
 .button, .button--resume {
   text-decoration: none;
   padding: 1em 2em;
@@ -233,11 +223,7 @@ header.slide {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-<<<<<<< HEAD
   margin-top: 2em;
-=======
-  margin-top: 3em;
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
   text-transform: capitalize;
 }
 
@@ -265,10 +251,10 @@ header.slide {
   transition: all 0.2s ease-in-out;
 }
 
-<<<<<<< HEAD
 .social .fa {
   padding: 4px;
-  font-size: 20px;
+  font-size: 24px;
+  font-weight: 700;
   margin: 10px;
   width: 22px;
   height: 22px;
@@ -277,21 +263,17 @@ header.slide {
   border-radius: 50%;
   -webkit-box-sizing: unset;
           box-sizing: unset;
-  background: #ece9d6;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   color: #6f7098;
 }
 
 .social .fa:hover {
-  opacity: 0.7;
+  color: black;
 }
 
 a > i {
   margin-right: 8px;
-=======
-.social i {
-  font-size: 22px;
-  margin: 0 0.5em;
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
 }
 
 main {
@@ -304,11 +286,6 @@ main {
   position: relative;
   height: 100%;
   background-color: #005c6e;
-  background-image: url("../images/land-mount.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: exclusion;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -321,7 +298,7 @@ main {
 }
 
 .hero-container {
-  max-width: 550px;
+  max-width: 600px;
   padding: 1em;
   margin: auto;
   text-align: center;
@@ -336,7 +313,7 @@ main {
 
 .hero-title {
   position: relative;
-  font-weight: 200;
+  font-weight: 500;
   font-size: 2em;
   letter-spacing: 6px;
   color: white;
@@ -362,12 +339,12 @@ main {
   font-size: 0.8em;
   letter-spacing: 3px;
   color: #bbbfcd;
-  width: 100%;
+  width: 90%;
   text-transform: uppercase;
+  line-height: 1.6;
 }
 
 .about-section {
-<<<<<<< HEAD
   background-color: #6cb3b6;
   text-align: center;
   padding: 7em 0.5em;
@@ -383,11 +360,6 @@ main {
   .about-section {
     padding: 7em 0em;
   }
-=======
-  height: 100vh;
-  background-color: #6cb3b6;
-  text-align: center;
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
 }
 
 .about-section .about-info {
@@ -401,7 +373,6 @@ main {
   font-weight: 300;
   letter-spacing: 1px;
   line-height: 1.7;
-<<<<<<< HEAD
   margin-top: 3em;
   margin-bottom: 1.5em;
 }
@@ -409,8 +380,6 @@ main {
 .about-section p + p {
   margin-top: 1.5em;
   margin-bottom: 3em;
-=======
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
 }
 
 .section-title, .section-subtitle {
@@ -435,11 +404,8 @@ main {
 }
 
 .about-image img {
-<<<<<<< HEAD
   margin-top: 3em;
   margin-bottom: 1.5em;
-=======
->>>>>>> 901e22709a4683b26e7d67ef24444c8ecfe3ae25
   width: 200px;
   border-radius: 50%;
   -webkit-filter: brightness(1.2) grayscale(0.3) opacity(0.8);
