Add projects section
See: #9

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -30,3 +30,11 @@ body {
 	max-width: $container-max-width;
 	margin: 0 auto;
 }
+
+.centered-text {
+	text-align: center;
+}
+
+section {
+	padding: 7em 0.5em;
+}
