--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -34,36 +34,40 @@ main {
 .hero-title {
 	position: relative;
 	font-weight: 500;
-	font-size: 2em;
+	font-size: 1.5em;
 	letter-spacing: 6px;
 	color: white;
+	opacity: 0;
 	line-height: 0.9em;
 	pointer-events: none;
 	text-transform: uppercase;
 
+	@include animation-slide-up(0s);
+
 	@include mobile {
-		font-size: 3em;
+		font-size: 2.2em;
 	}
 
 	@include tablet {
-		font-size: 3.5em;
+		font-size: 3em;
 	}
 }
 
 .hero-subtitle {
+	position: relative;
 	font-weight: 600;
 	font-size: 0.8em;
 	letter-spacing: 3px;
 	color: $gray-blue;
-<<<<<<< HEAD
-	line-height: 1.6;
 	//margin-top: 2em;
-	width: 90%;
-	text-transform: uppercase;
-=======
-	//margin-top: 2em;
+	opacity: 0;
 	width: 90%;
 	text-transform: uppercase;
 	line-height: 1.6;
->>>>>>> 94a14cee455f8bb20ca73dc08fbc174a12698ec6
+	@include animation-slide-up(0.2s);
+}
+
+#hero-button {
+	opacity: 0;
+	@include animation-slide-up(0.4s);
 }
