--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap");
-<<<<<<< HEAD
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Vidaloka&display=swap");
-=======
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300&display=swap");
->>>>>>> 94a14cee455f8bb20ca73dc08fbc174a12698ec6
+@-webkit-keyframes slide-up {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes slide-up {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
 :root {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -46,11 +66,19 @@ body {
   margin: 0 auto;
 }
 
+.centered-text {
+  text-align: center;
+}
+
+section {
+  padding: 7em 0.5em;
+}
+
 header {
   background-color: #005c6e;
   padding: 1.6em 1em;
   position: fixed;
-  z-index: 1;
+  z-index: 20;
   width: 100%;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -173,7 +201,7 @@ header.slide {
           transform: rotate(45deg) translate(-8px, -4px);
 }
 
-.link, .link--top, .logo {
+.link, .link--top, .link--case, .logo {
   font-weight: 400;
   font-size: 1.2em;
   letter-spacing: 2px;
@@ -199,6 +227,21 @@ header.slide {
 
 .link--top:hover {
   color: #9daf62;
+  text-decoration: underline;
+}
+
+.link--case {
+  color: #6f7098;
+  font-size: 1em;
+  font-weight: 400;
+  margin-right: 0em;
+  letter-spacing: 0;
+  text-transform: capitalize;
+}
+
+.link--case:hover {
+  color: #9daf62;
+  text-decoration: underline;
 }
 
 .button, .button--resume {
@@ -283,7 +326,6 @@ a > i {
 
 main {
   height: 100vh;
-  width: 100%;
   background-color: aqua;
   margin: 0;
 }
@@ -319,49 +361,70 @@ main {
 
 .hero-title {
   position: relative;
-<<<<<<< HEAD
-  font-weight: 900;
-=======
   font-weight: 500;
->>>>>>> 94a14cee455f8bb20ca73dc08fbc174a12698ec6
-  font-size: 2em;
+  font-size: 1.5em;
   letter-spacing: 6px;
   color: white;
+  opacity: 0;
   line-height: 0.9em;
   pointer-events: none;
   text-transform: uppercase;
+  -webkit-animation: slide-up;
+          animation: slide-up;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @media screen and (min-width: 480px) {
   .hero-title {
-    font-size: 3em;
+    font-size: 2.2em;
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero-title {
-    font-size: 3.5em;
+    font-size: 3em;
   }
 }
 
 .hero-subtitle {
+  position: relative;
   font-weight: 600;
   font-size: 0.8em;
   letter-spacing: 3px;
   color: #bbbfcd;
-<<<<<<< HEAD
-  line-height: 1.6;
-=======
->>>>>>> 94a14cee455f8bb20ca73dc08fbc174a12698ec6
+  opacity: 0;
   width: 90%;
   text-transform: uppercase;
   line-height: 1.6;
+  -webkit-animation: slide-up;
+          animation: slide-up;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+#hero-button {
+  opacity: 0;
+  -webkit-animation: slide-up;
+          animation: slide-up;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .about-section {
   background-color: #6cb3b6;
-  text-align: center;
-  padding: 7em 0.5em;
 }
 
 @media screen and (min-width: 480px) {
@@ -424,5 +487,310 @@ main {
   border-radius: 50%;
   -webkit-filter: brightness(1.2) grayscale(0.3) opacity(0.8);
           filter: brightness(1.2) grayscale(0.3) opacity(0.8);
+}
+
+.case-study-section {
+  background-color: #f8f8f8;
+  /* ======================== 
+ 	Mobile Styles: 0px to 480px 
+ 	===========================
+	*/
+}
+
+.case-study-section .case-title {
+  color: #222;
+  font-weight: 800;
+  font-size: 1.5rem;
+}
+
+.case-study-section p {
+  color: #9daf62;
+}
+
+.case-study-section .project__container {
+  padding: 0em 0.5em;
+  max-width: 1000px;
+  margin: 8em auto 5em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(280px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  row-gap: 1.25em;
+  -webkit-column-gap: 2.5em;
+          column-gap: 2.5em;
+  counter-reset: slide-number;
+}
+
+.case-study-section .project__container .item {
+  height: 300px;
+  position: relative;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  background-color: white;
+  -webkit-box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+  counter-increment: slide-number;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.case-study-section .project__container .item::before {
+  display: none;
+  content: counter(slide-number);
+  position: absolute;
+  left: 8px;
+  top: -18px;
+  font-size: 5rem;
+  color: rgba(255, 255, 255, 0.2);
+  z-index: 2;
+}
+
+.case-study-section .project__container .item:hover {
+  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.case-study-section .project__container .item:hover .item__header {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  opacity: 1;
+}
+
+.case-study-section .project__container .item:hover .item__header > h3 {
+  opacity: 0;
+}
+
+.case-study-section .project__container .item:hover p {
+  -webkit-transform: translate(0, -28px);
+          transform: translate(0, -28px);
+}
+
+.case-study-section .project__container .item:hover .item__list, .case-study-section .project__container .item:hover .item__list--links {
+  opacity: 1;
+  -webkit-transform: translateY(-25px);
+          transform: translateY(-25px);
+}
+
+.case-study-section .project__container .item__header {
+  position: absolute;
+  width: 100%;
+  height: 36%;
+  left: 0;
+  bottom: 0;
+  padding: 1.25em 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+  opacity: 1;
+  text-align: center;
+  z-index: 2;
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.case-study-section .project__container .item__header h3 {
+  color: #222;
+  position: relative;
+  font-weight: 500;
+  font-size: 1.2em;
+  text-transform: capitalize;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  opacity: 1;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.case-study-section .project__container .item__header p {
+  opacity: 1;
+  margin: 2px 0em 10px;
+  color: black;
+  font-size: 0.9em;
+  font-weight: 300;
+  letter-spacing: 0;
+  line-height: 1.58;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-transition: opacity 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: opacity 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: opacity 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: opacity 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.case-study-section .item__image {
+  background-color: white;
+  z-index: 1;
+  opacity: 1;
+  -webkit-transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.case-study-section .item__image img {
+  border-radius: 8px;
+  background-color: white;
+}
+
+.animate {
+  -webkit-animation: card-show 0.3s ease-out;
+          animation: card-show 0.3s ease-out;
+}
+
+.item__list, .item__list--links {
+  list-style: none;
+  display: none;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 0em;
+  background-color: white;
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  -webkit-transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.item__list li, .item__list--links li {
+  font-size: 0.8em;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 0.2em 0.5em;
+  background-color: #9daf62;
+  color: #6cb3b6;
+  border-radius: 4px;
+}
+
+.item__list li + li, .item__list--links li + li {
+  margin-left: 0.5em;
+}
+
+.item__list--links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 0.5em;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.item__list--links li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+.item__list--links li:hover .fa {
+  color: #9daf62;
+}
+
+.item__list--links li .fa {
+  color: #6f7098;
+  margin-right: 0.4em;
+  font-size: 1rem;
+}
+
+@-webkit-keyframes card-show {
+  0% {
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+}
+
+@keyframes card-show {
+  0% {
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+}
+
+.item-container:nth-child(2) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.item-container:nth-child(3) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.item-container:nth-child(4) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.item-container:nth-child(5) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.item-container:nth-child(6) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.item-container:nth-child(7) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.item-container:nth-child(8) {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+.case-study-section .item.appear {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 /*# sourceMappingURL=main.css.map */
