Modify color pallete
See: #9

--- a/css/_projects.scss
+++ b/css/_projects.scss
@@ -160,10 +160,10 @@
 			margin: 0;
 
 			&:hover .fa {
-				color: $green-light;
+				color: $red;
 			}
 			.fa {
-				color: $blue-dark;
+				color: $green-dark;
 				margin-right: 0.4em;
 				font-size: 1rem;
 			}
