--- a/css/_base.scss
+++ b/css/_base.scss
@@ -38,3 +38,26 @@ body {
 section {
 	padding: 7em 0.5em;
 }
+
+%title {
+	text-transform: uppercase;
+}
+.section-title {
+	color: $black;
+	@extend %title;
+	position: relative;
+	font-weight: 300;
+	font-size: 1.5em;
+	letter-spacing: 2px;
+}
+
+.section-subtitle {
+	@extend %title;
+	font-size: 0.7em;
+	font-weight: 600;
+	letter-spacing: 3.5px;
+	word-spacing: 2px;
+	margin-top: 0.8em;
+	opacity: 0.7;
+	color: $green-dark;
+}
