--- a/css/_links.scss
+++ b/css/_links.scss
@@ -18,22 +18,23 @@
 		}
 
 		&:hover {
-			color: $green-light;
+			color: $red;
 			text-decoration: underline;
 		}
 	}
 
 	&--case {
 		@extend .link;
-		color: $blue-dark;
+		color: $green-dark;
 		font-size: 1em;
-		font-weight: 400;
+		font-weight: 500;
 		margin-right: 0em;
+		opacity: 0.7;
 		letter-spacing: 0;
 		text-transform: capitalize;
 
 		&:hover {
-			color: $green-light;
+			color: $red;
 			text-decoration: underline;
 		}
 	}
@@ -60,6 +61,7 @@
 
 	&:hover {
 		background-color: rgba(255, 255, 255, 0.2);
+		background-color: $red;
 	}
 
 	&--resume {
@@ -90,23 +92,27 @@
 	clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
 	transform-style: preserve-3d;
 	@include transition;
+	&:hover {
+		color: $red;
+	}
 }
 
 .social .fa {
 	padding: 4px;
 	font-size: 24px;
-	font-weight: 700;
+	font-weight: 500;
 	margin: 10px;
-	width: 22px;
-	height: 22px;
+	width: 25px;
+	height: 25px;
 	text-align: center;
 	text-decoration: none;
-	border-radius: 50%;
+	border-radius: 6px;
 	box-sizing: unset;
 	@include transition;
-	color: $blue-dark;
+	color: $green-dark;
 	&:hover {
-		color: black;
+		color: rgba(255, 255, 255, 0.7);
+		background-color: $red;
 	}
 }
 
