--- a/css/_base.scss
+++ b/css/_base.scss
@@ -61,3 +61,17 @@ section {
 	opacity: 0.7;
 	color: $green-dark;
 }
+
+p {
+	font-size: 0.9em;
+	color: white;
+	font-weight: 300;
+	letter-spacing: 1px;
+	line-height: 1.7;
+	margin-top: 3em;
+	margin-bottom: 1.5em;
+	& + p {
+		margin-top: 1.5em;
+		margin-bottom: 3em;
+	}
+}
