--- a/css/_links.scss
+++ b/css/_links.scss
@@ -38,12 +38,6 @@
 			text-decoration: underline;
 		}
 	}
-	// &--social {
-	//   @extend .link;
-	//   &:hover {
-	//     color: white;
-	//   }
-	// }
 }
 
 .button {
@@ -78,6 +72,12 @@
 			font-size: 0.8em;
 		}
 	}
+
+	&--email {
+		@extend .button;
+		display: inline-block;
+		margin-bottom: 5em;
+	}
 }
 
 .logo {
@@ -111,7 +111,7 @@
 	@include transition;
 	color: $green-dark;
 	&:hover {
-		color: rgba(255, 255, 255, 0.7);
+		//color: rgba(255, 255, 255, 0.7);
 		background-color: $red;
 	}
 }
